--- a/package.json
+++ b/package.json
@@ -20,16 +20,24 @@
     "deploy": "zmp deploy"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "antd": "^5.24.8",
     "fitness-app": "file:",
     "jotai": "^2.12.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.0",
     "recoil": "^0.7.7",
+    "zmp-framework": "^1.7.5",
     "zmp-sdk": "latest",
-    "zmp-ui": "latest"
+    "zmp-ui": "^1.11.7"
   },
   "devDependencies": {
+    "@types/moment": "^2.11.29",
+    "@types/node": "^22.14.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^1.3.2",
